fix dark and contrast theme css card

--- a/src/app/components/card-level-theme/card-level-theme.component.scss
+++ b/src/app/components/card-level-theme/card-level-theme.component.scss
@@ -1,6 +1,6 @@
 :host-context(body.modo-escuro)  {
    .card {
-    background-color: #333;
+    background-color: #1f1f1f;
     color: #F9F9F9;
    }
 }
